# Leap-Motion

./: .gitignore  CMakeLists.txt  README.md  lexicon.txt  make.sh
qml/: Button.qml  KeyboardUI.qml
src/: Sample.cpp  _Sample.cpp  build_tree.py  converter.cpp  converter.h  helper.cpp  helper.h  keyboardui.cpp  keyboardui.h  lexicon.txt
